[gd_scene load_steps=7 format=3 uid="uid://dlwrtjnr6xty4"]

[ext_resource type="Texture2D" uid="uid://bbuo3vy70oprq" path="res://icon.svg" id="1_devb5"]
[ext_resource type="Texture2D" uid="uid://c0b0sawfyqtac" path="res://aseprite/fighter.png" id="2_mwhvl"]
[ext_resource type="Script" path="res://scripts/blessing_input.gd" id="3_ro0nv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fri2f"]
bg_color = Color(0, 0, 0, 0.501961)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 0.815686)
corner_radius_top_left = 25
corner_radius_top_right = 25

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wbhf4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ym2cl"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fri2f")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_wbhf4")

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftPanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 45
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/VBoxContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/VBoxContainer3/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
theme_override_colors/font_color = Color(0.113725, 0.568627, 0.243137, 1)
text = "Good traits"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/VBoxContainer3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Trait 1"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_devb5")
expand_mode = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/VBoxContainer3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Trait 2"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("1_devb5")
expand_mode = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/VBoxContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/VBoxContainer3/VBoxContainer2"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
theme_override_colors/font_color = Color(0.568627, 0.141176, 0.141176, 1)
text = "Bad traits"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/VBoxContainer3/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
text = "Trait 3"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
texture = ExtResource("1_devb5")
expand_mode = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/VBoxContainer3/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
text = "Trait 4"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
texture = ExtResource("1_devb5")
expand_mode = 3

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/VBoxContainer3/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer5"]
layout_mode = 2
text = "Trait 5"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer5"]
layout_mode = 2
texture = ExtResource("1_devb5")
expand_mode = 3

[node name="RightPanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_ym2cl")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RightPanelContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RightPanelContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_mwhvl")
stretch_mode = 5

[node name="BlessingInput" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("3_ro0nv")

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/BlessingInput"]
layout_mode = 2
text = "Blessing for: 50
"

[node name="BlessAmountSlider" type="HSlider" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/BlessingInput"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
value = 1.0

[node name="Button" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/BlessingInput"]
layout_mode = 2
text = "Bless"

[connection signal="value_changed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/BlessingInput/BlessAmountSlider" to="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/BlessingInput" method="_on_bless_amount_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/BlessingInput/Button" to="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/BlessingInput" method="_on_button_pressed"]
